Updated navigation samples page based on figma prototype #293

--- a/pages/sample/navigation-active.html
+++ b/pages/sample/navigation-active.html
@@ -10,7 +10,7 @@ permalink: "structure/navigation-active.html"
   <!-- Side navigation -->
   <nav aria-labelledby="navigation-list" class="side-navigation sticky-6">
    <ul class="list-navigation">
-    <li><a href="/structure/navsamples.html" id="navigation-list">Navigation samples</a>
+    <li><a href="/structure/site-navigation.html" id="navigation-list">Navigation samples</a>
      <ul>
       <li><a href="/structure/navigation-active.html" class="active">Active Navigation Item</a></li>
       <li><a href="/structure/navigation-dropdown.html">Dropdown Navigation</a></li>
