--- a/pages/sample/navigation-megamenu.html
+++ b/pages/sample/navigation-megamenu.html
@@ -1,9 +1,9 @@
----
-title: Navigation with icons
+﻿---
+title: Megamenu
 landing: Structure
-layout: navicons.njk
-permalink: "structure/navigation-icons.html"
-navigation: "../modules/nav-icons.html"
+layout: page.njk
+permalink: "structure/navigation-megamenu.html"
+navigation: "../modules/nav-flex.html"
 ---
 
 
@@ -25,8 +25,8 @@ navigation: "../modules/nav-icons.html"
        <ul>
         <li><a href="/structure/site-navigation.html#Single-level-menu">Single level menu</a></li>
         <li><a href="/structure/site-navigation.html#Dropdown-menu">Dropdown menu</a></li>
-        <li><a href="/structure/site-navigation.html#Megamenu">Megamenu</a></li>
-        <li><a href="/structure/site-navigation.html#Icon-menu" class="active">Icon menu</a></li>
+        <li><a href="/structure/site-navigation.html#Megamenu" class="active">Megamenu</a></li>
+        <li><a href="/structure/site-navigation.html#Icon-menu">Icon menu</a></li>
        </ul>
       </li>
       <li><a href="/structure/structure-utility-header.html">Utility Header</a></li>
@@ -38,13 +38,13 @@ navigation: "../modules/nav-icons.html"
  <div class="col-md-9 m-b-lg">
 
 
-  <h1 class="mt-lg-0">Icon menu</h1>
-  <p>Navigation with icons usually appears to the right of the site logo. It uses icons from
-   CAGov font library inside of the first level navigation items.</p>
-
-  <a href="/structure/site-navigation.html#Icon-menu" class="btn btn-outline-primary"><span
+  <h1 class="mt-lg-0">Megamenu</h1>
+  <p>
+   The flex megamenu displays dropdown panels for sub navigation when the user clicks on a primary
+   link.
+  </p>
+  <a href="/structure/site-navigation.html#Megamenu" class="btn btn-outline-primary"><span
     class="ca-gov-icon-arrow-prev" aria-hidden="true"></span> Back to site navigation</a>
-
 
  </div>
 </div>
