--- a/pages/sample/structure-mobile-controls.html
+++ b/pages/sample/structure-mobile-controls.html
@@ -18,7 +18,7 @@ permalink: "structure/structure-mobile-controls.html"
       <li><a href="/structure/structure-search.html">Search</a></li>
       <li><a href="/structure/structure-settings.html">Settings</a></li>
       <li><a href="/structure/structure-site-header.html">Site Header</a></li>
-      <li><a href="/structure/navsamples.html">Site Navigation</a></li>
+      <li><a href="/structure/site-navigation.html">Site Navigation</a></li>
       <li><a href="/structure/structure-utility-header.html">Utility Header</a></li>
      </ul>
     </li>
@@ -37,18 +37,6 @@ permalink: "structure/structure-mobile-controls.html"
    <li>Search toggle button.</li>
    <li>Navigation toggle button.</li>
   </ul>
-
-
-  <h2>When and how to use it</h2>
-
-  <p>The Mobile Control one of the essential State Web Template structural components. Without it users would not be
-   able to open site navigation or search bar in mobile view. It should be placed right below the site header.</p>
-  <p>By default, text identifier for search button is "Search" and text identifier for navigation button is "Menu".
-  </p>
-
-
-  <h2>Demo</h2>
-
 
 
 
@@ -125,6 +113,21 @@ permalink: "structure/structure-mobile-controls.html"
     </div>
    </div>
   </div>
+
+
+
+
+
+  <h2>Usage</h2>
+  <h3>When and how to use it</h3>
+
+  <p>The Mobile Control one of the essential State Web Template structural components. Without it users would not be
+   able to open site navigation or search bar in mobile view. It should be placed right below the site header.</p>
+  <p>By default, text identifier for search button is "Search" and text identifier for navigation button is "Menu".
+  </p>
+
+
+
 
 
 
