--- a/pages/sample/structure-settings.html
+++ b/pages/sample/structure-settings.html
@@ -18,7 +18,7 @@ permalink: "structure/structure-settings.html"
       <li><a href="/structure/structure-search.html">Search</a></li>
       <li><a href="/structure/structure-settings.html" class="active">Settings</a></li>
       <li><a href="/structure/structure-site-header.html">Site Header</a></li>
-      <li><a href="/structure/navsamples.html">Site Navigation</a></li>
+      <li><a href="/structure/site-navigation.html">Site Navigation</a></li>
       <li><a href="/structure/structure-utility-header.html">Utility Header</a></li>
      </ul>
     </li>
@@ -41,15 +41,6 @@ permalink: "structure/structure-settings.html"
    <li>Close Settings Bar button</li>
   </ul>
 
-  <h2>When and how to use it</h2>
-
-  <p>The Settings Bar is activated by the settings toggle button that can be seen in the top right corner of the page.
-   That button is part of the Utility Header component.
-   The Settings Bar is hidden byt default and is placed right after Utility Header section. </p>
-
-
-
-  <h2>Demo</h2>
 
   <div class="tab-group responsive">
    <ul id="tabs2" class="nav nav-tabs" role="tablist">
@@ -125,6 +116,19 @@ permalink: "structure/structure-settings.html"
     </div>
    </div>
   </div>
+
+
+  <h2>Usage</h2>
+
+
+  <h3>When and how to use it</h3>
+
+  <p>The Settings Bar is activated by the settings toggle button that can be seen in the top right corner of the page.
+   That button is part of the Utility Header component.
+   The Settings Bar is hidden byt default and is placed right after Utility Header section. </p>
+
+
+
 
 
 
