--- a/pages/sample/structure-site-header.html
+++ b/pages/sample/structure-site-header.html
@@ -18,7 +18,7 @@ permalink: "structure/structure-site-header.html"
       <li><a href="/structure/structure-search.html">Search</a></li>
       <li><a href="/structure/structure-settings.html">Settings</a></li>
       <li><a href="/structure/structure-site-header.html" class="active">Site Header</a></li>
-      <li><a href="/structure/navsamples.html">Site Navigation</a></li>
+      <li><a href="/structure/site-navigation.html">Site Navigation</a></li>
       <li><a href="/structure/structure-utility-header.html">Utility Header</a></li>
      </ul>
     </li>
@@ -41,16 +41,6 @@ permalink: "structure/structure-site-header.html"
    directly the <a href="/structure/structure-search.html">Search component</a> page.</a></p>
 
 
-  <h2>When and how to use it</h2>
-
-  <p>The site header goes on all pages of your website. </p>
-
-  <p>If you use a logo in your site header, make sure that any text in it is legible. Look at how much and where any
-   white space is.</p>
-  <h3>How not to use it</h3>
-  <p>Do not modify the site header beyond adding the site name and a logo.</p>
-
-  <h2>Demo</h2>
 
   <div class="tab-group responsive">
    <ul id="tabs2" class="nav nav-tabs" role="tablist">
@@ -97,7 +87,7 @@ permalink: "structure/structure-site-header.html"
       <div class="card-body">
        <h3 class="h4 m-t-0">HTML</h3>
        <pre><code>{% include "../../src/_includes/site-header.njk" %}</code>
-       </pre>
+        </pre>
       </div>
      </div>
     </div>
@@ -126,6 +116,19 @@ permalink: "structure/structure-site-header.html"
     </div>
    </div>
   </div>
+
+
+  <h2>Usage</h2>
+  <h3>When and how to use it</h3>
+
+  <p>The site header goes on all pages of your website. </p>
+
+  <p>If you use a logo in your site header, make sure that any text in it is legible. Look at how much and where any
+   white space is.</p>
+  <h3>How not to use it</h3>
+  <p>Do not modify the site header beyond adding the site name and a logo.</p>
+
+
 
 
 
