--- a/pages/sample/structure-utility-header.html
+++ b/pages/sample/structure-utility-header.html
@@ -18,7 +18,7 @@ permalink: "structure/structure-utility-header.html"
       <li><a href="/structure/structure-search.html">Search</a></li>
       <li><a href="/structure/structure-settings.html">Settings</a></li>
       <li><a href="/structure/structure-site-header.html">Site Header</a></li>
-      <li><a href="/structure/navsamples.html">Site Navigation</a></li>
+      <li><a href="/structure/site-navigation.html">Site Navigation</a></li>
       <li><a href="/structure/structure-utility-header.html" class="active">Utility Header</a></li>
      </ul>
     </li>
@@ -40,22 +40,6 @@ permalink: "structure/structure-utility-header.html"
   </ul>
   </p>
 
-  <h2>When and how to use it</h2>
-
-  <p>The Utility Heaqder is a required State Web Template component. Place it at the top of the website, above the
-   Site Header, Settings and all other content.</p>
-
-  <p>You can include a translation widget or other optional utility links next to Settings Bar toggle button in the
-   Utility Header. </p>
-
-  <h3>How not to use it</h3>
-
-  <p>Do not add other elements to or change the utility header. Use it only as designed.</p>
-
-  <p>Do not combine the utility header with depatment name or logo, navigation, or information. This is contained in
-   the site header.</p>
-
-  <h2>Demo</h2>
 
   <div class="tab-group responsive">
    <ul id="tabs2" class="nav nav-tabs" role="tablist">
@@ -132,6 +116,24 @@ permalink: "structure/structure-utility-header.html"
     </div>
    </div>
   </div>
+
+  <h2>Usage</h2>
+  <h3>When and how to use it</h3>
+
+  <p>The Utility Heaqder is a required State Web Template component. Place it at the top of the website, above the
+   Site Header, Settings and all other content.</p>
+
+  <p>You can include a translation widget or other optional utility links next to Settings Bar toggle button in the
+   Utility Header. </p>
+
+  <h3>How not to use it</h3>
+
+  <p>Do not add other elements to or change the utility header. Use it only as designed.</p>
+
+  <p>Do not combine the utility header with depatment name or logo, navigation, or information. This is contained in
+   the site header.</p>
+
+
 
 
 
