--- a/pages/sample/navigation-dropdown.html
+++ b/pages/sample/navigation-dropdown.html
@@ -11,15 +11,22 @@ navigation: "../modules/nav-dropdown.html"
   <!-- Side navigation -->
   <nav aria-labelledby="navigation-list" class="side-navigation sticky-6">
    <ul class="list-navigation">
-    <li><a href="/structure//navsamples.html" id="navigation-list">Navigation samples</a>
+    <li><a href="/structure.html" id="navigation-list">Strucutral components</a>
      <ul>
-      <li><a href="/structure/navigation-dropdown.html" class="active">Dropdown Navigation</a></li>
-      <li><a href="/structure/navigation-megamenu-flex.html">Flex Megamenu Navigation</a></li>
-      <li><a href="/structure/navigation-full-width-utility.html">Full Width Navigation with Active Search</a></li>
-      <li><a href="/structure/navigation-icons.html">Navigation with icons</a></li>
-      <li><a href="/structure/page-navigation.html">Page navigation</a></li>
-      <li><a href="/structure/navigation-sidebar.html">Side navigation</a></li>
-      <li><a href="/structure/navigation-single.html">Single Level Navigation</a></li>
+      <li><a href="/structure/structure-global-footer.html">Global Footer</a></li>
+      <li><a href="/structure/structure-mobile-controls.html">Mobile Controls</a></li>
+      <li><a href="/structure/structure-search.html">Search</a></li>
+      <li><a href="/structure/structure-settings.html">Settings</a></li>
+      <li><a href="/structure/structure-site-header.html">Site Header</a></li>
+      <li><a href="/structure/site-navigation.html">Site Navigation</a>
+       <ul>
+        <li><a href="/structure/site-navigation.html#Single-level-menu">Single level menu</a></li>
+        <li><a href="/structure/site-navigation.html#Dropdown-menu" class="active">Dropdown menu</a></li>
+        <li><a href="/structure/site-navigation.html#Megamenu">Megamenu</a></li>
+        <li><a href="/structure/site-navigation.html#Icon-menu">Icon menu</a></li>
+       </ul>
+      </li>
+      <li><a href="/structure/structure-utility-header.html">Utility Header</a></li>
      </ul>
     </li>
    </ul>
@@ -28,20 +35,13 @@ navigation: "../modules/nav-dropdown.html"
  <div class="col-md-9 m-b-lg">
 
 
-  <h1 class="mt-lg-0">Dropdown Navigation </h1>
-  <p>This page is using the Dropdown Navigation or Mininav.</p>
-  <p>The dropdown menu displays a simple dropdown for sub navigation elements. This style of menu can be
-   set by including the <code>.dropdown</code> class in the <code>&lt;nav&gt;</code> element. like this
-   <code>&lt;nav id="navigation" class="main-navigation dropdown"&gt;</code> .
+  <h1 class="mt-lg-0">Dropdown menu </h1>
+  <p>This page is using the Dropdown menu.</p>
+  <p>The dropdown menu displays a simple dropdown for sub navigation elements.
   </p>
-  <h2>Example Screenshot:</h2>
-  <img src="/images/navigation-dropdown.jpg" alt="Dropdown Naviagiton"
-   class="img-fluid brd-solid-1 brd-gray-light shadow2 m-b-md">
 
-  <h2>Source code:</h2>
-  <p>In the template distribution the Dropdown Navigation's full markup can be found in
-   <code>/src/_includes/modules/nav-dropdown.html</code>.
-
+  <a href="/structure/site-navigation.html#Dropdown-menu" class="btn btn-outline-primary"><span
+    class="ca-gov-icon-arrow-prev" aria-hidden="true"></span> Back to site navigation</a>
 
 
  </div>
