--- a/pages/sample/navigation-sidebar.html
+++ b/pages/sample/navigation-sidebar.html
@@ -11,7 +11,7 @@ permalink: "structure/navigation-sidebar.html"
   <!-- Side navigation -->
   <nav aria-labelledby="navigation-list" class="side-navigation sticky-6">
    <ul class="list-navigation">
-    <li><a href="/structure/navsamples.html" id="navigation-list">Navigation samples</a>
+    <li><a href="/structure/site-navigation.html" id="navigation-list">Navigation samples</a>
      <ul>
       <li><a href="/structure/navigation-dropdown.html">Dropdown Navigation</a></li>
       <li><a href="/structure/navigation-megamenu-flex.html">Flex Megamenu Navigation</a></li>
