--- a/pages/sample/navigation-single.html
+++ b/pages/sample/navigation-single.html
@@ -10,16 +10,25 @@ navigation: "../modules/nav-singlelevel.html"
  <div class="col-md-3">
   <!-- Side navigation -->
   <nav aria-labelledby="navigation-list" class="side-navigation sticky-6">
+
+
    <ul class="list-navigation">
-    <li><a href="/structure/navsamples.html" id="navigation-list">Navigation samples</a>
+    <li><a href="/structure.html" id="navigation-list">Strucutral components</a>
      <ul>
-      <li><a href="/structure/navigation-dropdown.html">Dropdown Navigation</a></li>
-      <li><a href="/structure/navigation-megamenu-flex.html">Flex Megamenu Navigation</a></li>
-      <li><a href="/structure/navigation-full-width-utility.html">Full Width Navigation with Active Search</a></li>
-      <li><a href="/structure/navigation-icons.html">Navigation with icons</a></li>
-      <li><a href="/structure/page-navigation.html">Page navigation</a></li>
-      <li><a href="/structure/navigation-sidebar.html">Side navigation</a></li>
-      <li><a href="/structure/navigation-single.html" class="active">Single Level Navigation</a></li>
+      <li><a href="/structure/structure-global-footer.html">Global Footer</a></li>
+      <li><a href="/structure/structure-mobile-controls.html">Mobile Controls</a></li>
+      <li><a href="/structure/structure-search.html">Search</a></li>
+      <li><a href="/structure/structure-settings.html">Settings</a></li>
+      <li><a href="/structure/structure-site-header.html">Site Header</a></li>
+      <li><a href="/structure/site-navigation.html">Site Navigation</a>
+       <ul>
+        <li><a href="/structure/site-navigation.html#Single-level-menu" class="active">Single level menu</a></li>
+        <li><a href="/structure/site-navigation.html#Dropdown-menu">Dropdown menu</a></li>
+        <li><a href="/structure/site-navigation.html#Megamenu">Megamenu</a></li>
+        <li><a href="/structure/site-navigation.html#Icon-menu">Icon menu</a></li>
+       </ul>
+      </li>
+      <li><a href="/structure/structure-utility-header.html">Utility Header</a></li>
      </ul>
     </li>
    </ul>
@@ -28,29 +37,12 @@ navigation: "../modules/nav-singlelevel.html"
  <div class="col-md-9 m-b-lg">
 
 
-  <h1 class="mt-lg-0">Single Level Navigation</h1>
+  <h1 class="mt-lg-0">Single Level menu</h1>
   <p>This page is using the Single Level Navigation. This navigation style does not include a dropdown for
    sub navigation items.</p>
 
-  <p>This style of menu can be set by including the <code>.singlelevel</code> class in the
-   <code>&lt;nav&gt;</code> element like this
-   <code>&lt;nav id="navigation" class="main-navigation singlelevel"&gt;</code>.
-  </p>
-
-
-
-  <h2>Example Screenshot</h2>
-  <img src="/images/navigation-single.jpg" alt="Single level naviagiton"
-   class="img-fluid brd-solid-1 brd-gray-light shadow2 m-b-md">
-
-
-
-
-  <h3>Source code:</h3>
-  <p>In the template distribution Understated Bootstrap Accordion Side Navigation full HTML markup can be found in
-   <code>/src/_includes/modules/nav-singlelevel.html</code> file.
-  </p>
-
+  <a href="/structure/site-navigation.html#Single-level-menu" class="btn btn-outline-primary"><span
+    class="ca-gov-icon-arrow-prev" aria-hidden="true"></span> Back to site navigation</a>
 
  </div>
 </div>
