--- a/pages/structure.html
+++ b/pages/structure.html
@@ -21,7 +21,7 @@ permalink: "structure.html"
       <li><a href="/structure/structure-search.html">Search</a></li>
       <li><a href="/structure/structure-settings.html">Settings</a></li>
       <li><a href="/structure/structure-site-header.html">Site Header</a></li>
-      <li><a href="/structure/navsamples.html">Site Navigation</a></li>
+      <li><a href="/structure/site-navigation.html">Site Navigation</a></li>
       <li><a href="/structure/structure-utility-header.html">Utility Header</a></li>
      </ul>
     </li>
@@ -56,13 +56,18 @@ permalink: "structure.html"
    <div class="modal-dialog modal-lg">
     <div class="modal-content">
      <div class="modal-header">
-      <h4 class="modal-title">HTML Markup</h4>
+      <h4 class="modal-title">Structure source code</h4>
       <button type="button" class="close btn btn-secondary" data-bs-dismiss="modal"><span class="sr-only">Close
         modal</span><span class="ca-gov-icon-close-mark" aria-hidden="true"></span></button>
 
      </div>
      <div class="modal-body">
-      <strong aria-label="Source code for Info Blocks">State Web Template structure code:</strong>
+      <p aria-label="Source code for state web template structure"><span class="text-highlight-primary">Note:</span> The
+       file path
+       to the
+       includes will be relative
+       to the directory of your page.
+      </p>
       <pre>
 <span class="text-success">&lt;!doctype html&gt;</span>
 <span class="text-accent-p2">&lt;html</span> <span class="text-info">lang=</span><span class="text-accent7">"en"</span><span class="text-accent-p2">&gt;</span>
@@ -99,10 +104,7 @@ permalink: "structure.html"
      <span class="text-success">&#10100;% include "/src/_includes/scripts.njk" %&#10101;</span>
   <span class="text-accent-p2">&lt;/body&gt;</span>
 <span class="text-accent-p2">&lt;/html&gt;</span></pre>
-      <p><span class="text-highlight-primary">Note:</span> Path to the includes will be relative to the directory of
-       your
-       page.
-      </p>
+
 
       </pre>
      </div>
@@ -204,7 +206,7 @@ permalink: "structure.html"
    </div>
 
    <div class="col-md-4 m-t-md">
-    <a href="/structure/navsamples.html"
+    <a href="/structure/site-navigation.html"
      class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
      title="Site Navigation component">
      <div class="p-a-md d-flex align-content-center">
