--- a/pages/sample/hero-banner.html
+++ b/pages/sample/hero-banner.html
@@ -20,7 +20,7 @@ permalink: "patterns/hero-banner.html"
 
 <p>The hero banner features an action you want people to take or important information on the homepage. </p>
 
-<h2 id="Hero-banner">Hero banner</h2>
+<h2 id="Sample">Sample</h2>
 
 <!--TABS-->
 <div class="tab-group responsive">
@@ -76,66 +76,6 @@ permalink: "patterns/hero-banner.html"
  </div>
 </div>
 <!--END TABS-->
-
-
-
-<h2 id="Hero-info">Hero info</h2>
-
-<!--TABS-->
-<div class="tab-group responsive">
- <ul id="tabs2" class="nav nav-tabs" role="tablist">
-  <li class="nav-item">
-   <a id="tab-example2" href="#pane-example2" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
-  </li>
-  <li class="nav-item">
-   <a id="tab-html2" href="#pane-html2" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
-  </li>
-
- </ul>
-
-
- <div id="tab-content" class="tab-content">
-  <!--Examples-->
-  <div id="pane-example2" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-example2">
-   <div class="card-header" id="heading-example2">
-    <a data-bs-toggle="collapse" href="#collapse-example2" data-parent="#tab-content" aria-expanded="true"
-     aria-controls="collapse-example2" data-hash="#pane-example2" title="Example tab header">
-     Example
-    </a>
-   </div>
-   <div id="collapse-example2" class="collapse show" role="tabpanel" aria-labelledby="heading-example2">
-    <div class="card-body p-b-lg">
-
-
-     {% include "../../src/_includes/modules/hero-info.html" %}
-
-    </div>
-   </div>
-  </div>
-
-
-
-  <!--HTML-->
-  <div id="pane-html2" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-html2">
-   <div class="card-header" id="heading-html2">
-    <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html2" data-parent="#tab-content"
-     aria-expanded="false" aria-controls="collapse-html2" data-hash="#pane-html2" title="HTML Source code tab header">
-     Source code
-    </a>
-   </div>
-   <div id="collapse-html2" class="collapse" role="tabpanel" aria-labelledby="heading-html2">
-    <div class="card-body">
-     <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/hero-info.html" %}</code>
-    </pre>
-    </div>
-   </div>
-  </div>
-
-
- </div>
-</div>
-<!--END TABS-->
-
 
 
 
