updated components page #299

--- a/pages/components.html
+++ b/pages/components.html
@@ -29,8 +29,8 @@ permalink: "components.html"
    </div>
    <div class="p-a">
     <h3 class="h5 m-t-0">Accordion</h3>
-    <p class="font-size-16 color-black">An accordion is a list of headers that hide or reveal additional content when
-     selected
+    <p class="font-size-16 color-black">An accordion is a list of headings that hide or reveal additional content when
+     selected.
     </p>
    </div>
   </a>
@@ -43,8 +43,8 @@ permalink: "components.html"
     <img src="/images/components/icon-alert.jpg" alt="Alert banner component" class="img-fluid">
    </div>
    <div class="p-a">
-    <h3 class="h5 m-t-0">Alert banner</h3>
-    <p class="font-size-16 color-black">An alert keeps users informed of important and sometimes time-sensitive changes
+    <h3 class="h5 m-t-0">Alert</h3>
+    <p class="font-size-16 color-black">An alert keeps users informed of important and sometimes time-sensitive changes.
     </p>
    </div>
   </a>
@@ -58,7 +58,7 @@ permalink: "components.html"
    </div>
    <div class="p-a">
     <h3 class="h5 m-t-0">Blockquote</h3>
-    <p class="font-size-16 color-black">A blockquote emphasizes important speaker quotes or excerpts
+    <p class="font-size-16 color-black">A blockquote emphasizes important speaker quotes or content excerpts.
     </p>
    </div>
   </a>
@@ -80,8 +80,8 @@ permalink: "components.html"
    </div>
    <div class="p-a">
     <h3 class="h5 m-t-0">Breadcrumb</h3>
-    <p class="font-size-16 color-black">A breadcrumb indication of the current page's location within a navigational
-     hierarchy</p>
+    <p class="font-size-16 color-black">A breadcrumb indicates the current page's location within a navigational
+     hierarchy.</p>
    </div>
   </a>
  </div>
@@ -96,7 +96,7 @@ permalink: "components.html"
    <div class="p-a">
     <h3 class="h5 m-t-0">Button</h3>
     <p class="font-size-16 color-black">A button draws attention to your primary call to action with a large clickable
-     surface
+     surface.
     </p>
    </div>
   </a>
@@ -112,7 +112,7 @@ permalink: "components.html"
    <div class="p-a">
     <h3 class="h5 m-t-0">Card</h3>
     <p class="font-size-16 color-black">A card displays a snippet of information and can link to more details upon
-     interaction
+     interaction.
     </p>
    </div>
   </a>
@@ -134,7 +134,7 @@ permalink: "components.html"
    <div class="p-a">
     <h3 class="h5 m-t-0">Countdown timer</h3>
     <p class="font-size-16 color-black">A countdown timer emphasizes an important event by counting toward or away from
-     a fixed point in time
+     a fixed point in time.
     </p>
    </div>
   </a>
@@ -148,7 +148,7 @@ permalink: "components.html"
    </div>
    <div class="p-a">
     <h3 class="h5 m-t-0">Form elements</h3>
-    <p class="font-size-16 color-black">A form allows visitors to submit information to a server
+    <p class="font-size-16 color-black">A form allows visitors to enter and submit information to a server.
     </p>
    </div>
   </a>
@@ -163,7 +163,7 @@ permalink: "components.html"
    <div class="p-a">
     <h3 class="h5 m-t-0">Horizontal separator</h3>
     <p class="font-size-16 color-black">The horizontal separator is a style component that uses a line to separate
-     content into sections</p>
+     content into sections.</p>
    </div>
   </a>
  </div>
@@ -185,7 +185,7 @@ permalink: "components.html"
    </div>
    <div class="p-a">
     <h3 class="h5 m-t-0">Lists</h3>
-    <p class="font-size-16 color-black">A list is a vertical grouping of related content
+    <p class="font-size-16 color-black">A list is a vertical grouping of related content.
     </p>
    </div>
   </a>
@@ -205,6 +205,31 @@ permalink: "components.html"
    </div>
   </a>
  </div>
+
+ <div class="col-md-4 m-t-md">
+  <a href="/components/number-counter.html"
+   class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
+   title="Number counter component example">
+   <div class="p-a-md d-flex align-content-center">
+    <img src="/images/components/icon-number.jpg" alt="Number counter component" class="img-fluid">
+   </div>
+   <div class="p-a">
+    <h3 class="h5 m-t-0">Number counter</h3>
+    <p class="font-size-16 color-black">The number counter adds animation to numbers.</p>
+   </div>
+  </a>
+ </div>
+
+
+
+
+</div>
+
+
+
+
+<div class="row">
+
  <div class="col-md-4 m-t-md">
   <a href="/components/parallax.html"
    class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
@@ -215,23 +240,15 @@ permalink: "components.html"
    <div class="p-a">
     <h3 class="h5 m-t-0">Parallax</h3>
     <p class="font-size-16 color-black">The parallax is a visual design component. When scrolling, it allows background
-     and foreground elements to move at different speeds
+     and foreground elements to move at different speeds.
     </p>
    </div>
   </a>
  </div>
 
 
-</div>
-
-
-
-
-<div class="row">
-
-
  <div class="col-md-4 m-t-md">
-  <a href="/components/progress-blocks.html"
+  <a href="/components/progress-tracker.html"
    class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
    title="Progress tracker component example">
    <div class="p-a-md d-flex align-content-center">
@@ -239,23 +256,11 @@ permalink: "components.html"
    </div>
    <div class="p-a">
     <h3 class="h5 m-t-0">Progress tracker</h3>
-    <p class="font-size-16 color-black">A progress tracker displays the steps and progress through a journey</p>
+    <p class="font-size-16 color-black">A progress tracker displays the steps and progress through a journey.</p>
    </div>
   </a>
  </div>
- <div class="col-md-4 m-t-md">
-  <a href="/components/number-counter.html"
-   class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
-   title="Number counter component example">
-   <div class="p-a-md d-flex align-content-center">
-    <img src="/images/components/icon-number.jpg" alt="Number counter component" class="img-fluid">
-   </div>
-   <div class="p-a">
-    <h3 class="h5 m-t-0">Rolling number counter</h3>
-    <p class="font-size-16 color-black">The rolling number counter adds animation to numbers</p>
-   </div>
-  </a>
- </div>
+
  <div class="col-md-4 m-t-md">
   <a href="/components/featured-search.html"
    class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
@@ -266,7 +271,7 @@ permalink: "components.html"
    <div class="p-a">
     <h3 class="h5 m-t-0">Search bar</h3>
     <p class="font-size-16 color-black">The search bar allows visitors to search for specific content using keywords or
-     phrases
+     phrases.
     </p>
    </div>
   </a>
@@ -288,7 +293,7 @@ permalink: "components.html"
    <div class="p-a">
     <h3 class="h5 m-t-0">Social media icons </h3>
     <p class="font-size-16 color-black">The social media icons component lets you share your agency’s social media pages
-     with visitors
+     with visitors.
     </p>
    </div>
   </a>
@@ -302,7 +307,7 @@ permalink: "components.html"
    </div>
    <div class="p-a">
     <h3 class="h5 m-t-0">Table</h3>
-    <p class="font-size-16 color-black">A table displays large amounts of data in rows and columns
+    <p class="font-size-16 color-black">A table displays large amounts of data in rows and columns.
     </p>
    </div>
   </a>
@@ -317,7 +322,7 @@ permalink: "components.html"
    <div class="p-a">
     <h3 class="h5 m-t-0">Tabs</h3>
     <p class="font-size-16 color-black">Tabs organize related content into panels and enable visitors to navigate
-     between them</p>
+     between them.</p>
    </div>
   </a>
  </div>
