--- a/pages/sample/number-counter.html
+++ b/pages/sample/number-counter.html
@@ -1,15 +1,15 @@
 ﻿---
-title: Rolling number Counter
+title: Number Counter
 landing: Components
 layout: components.njk
-permalink: "components/rolling-number-counter.html"
+permalink: "components/number-counter.html"
 ---
 
 
 
 <div class="row">
  <div class="half">
-  <h1 class="mt-lg-0">Rolling number Counter</h1>
+  <h1 class="mt-lg-0">Number counter</h1>
 
   <hr>
 
