--- a/pages/sample/blockquotes.html
+++ b/pages/sample/blockquotes.html
@@ -13,7 +13,7 @@ permalink: "components/blockquotes.html"
 <p>A blockquote emphasizes quotes or excerpts related to the page content.</p>
 <p>Blockquote text is styled differently from the main text and is typically used for important quotations.</p>
 
-<h2 id="Basic-blockquote">Basic blockquote:</h2>
+<h2 id="Basic-blockquote">Basic blockquote</h2>
 
 <!--TABS-->
 <div class="tab-group responsive">
