--- a/pages/sample/structure-global-footer.html
+++ b/pages/sample/structure-global-footer.html
@@ -13,13 +13,13 @@ permalink: "structure/structure-global-footer.html"
    <ul class="list-navigation">
     <li><a href="/structure.html" id="navigation-list">Strucutral components</a>
      <ul>
-      <li><a href="/structure/structure-global-footer.html" class="active">Global Footer</a></li>
-      <li><a href="/structure/structure-mobile-controls.html">Mobile Controls</a></li>
+      <li><a href="/structure/structure-global-footer.html" class="active">Global footer</a></li>
+      <li><a href="/structure/structure-mobile-controls.html">Mobile controls</a></li>
       <li><a href="/structure/structure-search.html">Search</a></li>
       <li><a href="/structure/structure-settings.html">Settings</a></li>
-      <li><a href="/structure/structure-site-header.html">Site Header</a></li>
-      <li><a href="/structure/site-navigation.html">Site Navigation</a></li>
-      <li><a href="/structure/structure-utility-header.html">Utility Header</a></li>
+      <li><a href="/structure/structure-site-header.html">Site header</a></li>
+      <li><a href="/structure/site-navigation.html">Site navigation</a></li>
+      <li><a href="/structure/structure-utility-header.html">Utility header</a></li>
      </ul>
     </li>
    </ul>
@@ -27,7 +27,7 @@ permalink: "structure/structure-global-footer.html"
  </div>
  <div class="col-md-9 m-b-lg">
 
-  <h1 class="mt-lg-0">Global Footer</h1>
+  <h1 class="mt-lg-0">Global footer</h1>
   <p>The Global Footer puts a State Web Template standard footer at the very bottom of your site. Having a common footer
    tells people
    that the website is an official product of the State of California, which increases user trust.</p>
