--- a/pages/sample/structure-mobile-controls.html
+++ b/pages/sample/structure-mobile-controls.html
@@ -13,13 +13,13 @@ permalink: "structure/structure-mobile-controls.html"
    <ul class="list-navigation">
     <li><a href="/structure.html" id="navigation-list">Strucutral components</a>
      <ul>
-      <li><a href="/structure/structure-global-footer.html">Global Footer</a></li>
-      <li><a href="/structure/structure-mobile-controls.html" class="active">Mobile Controls</a></li>
+      <li><a href="/structure/structure-global-footer.html">Global footer</a></li>
+      <li><a href="/structure/structure-mobile-controls.html" class="active">Mobile controls</a></li>
       <li><a href="/structure/structure-search.html">Search</a></li>
       <li><a href="/structure/structure-settings.html">Settings</a></li>
-      <li><a href="/structure/structure-site-header.html">Site Header</a></li>
-      <li><a href="/structure/site-navigation.html">Site Navigation</a></li>
-      <li><a href="/structure/structure-utility-header.html">Utility Header</a></li>
+      <li><a href="/structure/structure-site-header.html">Site header</a></li>
+      <li><a href="/structure/site-navigation.html">Site navigation</a></li>
+      <li><a href="/structure/structure-utility-header.html">Utility header</a></li>
      </ul>
     </li>
    </ul>
@@ -28,7 +28,7 @@ permalink: "structure/structure-mobile-controls.html"
  <div class="col-md-9 m-b-lg">
 
 
-  <h1 class="mt-lg-0">Mobile Controls</h1>
+  <h1 class="mt-lg-0">Mobile controls</h1>
   <p>Mobile Controls are the search and navigation toggle buttons that expand and collapse
    search and navigation sections in mobile view.</p>
   <p>It includes:</p>
