--- a/pages/sample/structure-search.html
+++ b/pages/sample/structure-search.html
@@ -13,13 +13,13 @@ permalink: "structure/structure-search.html"
    <ul class="list-navigation">
     <li><a href="/structure.html" id="navigation-list">Strucutral components</a>
      <ul>
-      <li><a href="/structure/structure-global-footer.html">Global Footer</a></li>
-      <li><a href="/structure/structure-mobile-controls.html">Mobile Controls</a></li>
+      <li><a href="/structure/structure-global-footer.html">Global footer</a></li>
+      <li><a href="/structure/structure-mobile-controls.html">Mobile controls</a></li>
       <li><a href="/structure/structure-search.html" class="active">Search</a></li>
       <li><a href="/structure/structure-settings.html">Settings</a></li>
-      <li><a href="/structure/structure-site-header.html">Site Header</a></li>
-      <li><a href="/structure/site-navigation.html">Site Navigation</a></li>
-      <li><a href="/structure/structure-utility-header.html">Utility Header</a></li>
+      <li><a href="/structure/structure-site-header.html">Site header</a></li>
+      <li><a href="/structure/site-navigation.html">Site navigation</a></li>
+      <li><a href="/structure/structure-utility-header.html">Utility header</a></li>
      </ul>
     </li>
    </ul>
