--- a/pages/sample/structure-settings.html
+++ b/pages/sample/structure-settings.html
@@ -13,13 +13,13 @@ permalink: "structure/structure-settings.html"
    <ul class="list-navigation">
     <li><a href="/structure.html" id="navigation-list">Strucutral components</a>
      <ul>
-      <li><a href="/structure/structure-global-footer.html">Global Footer</a></li>
-      <li><a href="/structure/structure-mobile-controls.html">Mobile Controls</a></li>
+      <li><a href="/structure/structure-global-footer.html">Global footer</a></li>
+      <li><a href="/structure/structure-mobile-controls.html">Mobile controls</a></li>
       <li><a href="/structure/structure-search.html">Search</a></li>
       <li><a href="/structure/structure-settings.html" class="active">Settings</a></li>
-      <li><a href="/structure/structure-site-header.html">Site Header</a></li>
-      <li><a href="/structure/site-navigation.html">Site Navigation</a></li>
-      <li><a href="/structure/structure-utility-header.html">Utility Header</a></li>
+      <li><a href="/structure/structure-site-header.html">Site header</a></li>
+      <li><a href="/structure/site-navigation.html">Site navigation</a></li>
+      <li><a href="/structure/structure-utility-header.html">Utility header</a></li>
      </ul>
     </li>
    </ul>
@@ -28,7 +28,7 @@ permalink: "structure/structure-settings.html"
  <div class="col-md-9 m-b-lg">
 
 
-  <h1 class="mt-lg-0">Settings Bar</h1>
+  <h1 class="mt-lg-0">Settings bar</h1>
   <p>Settings Bar is State Web Template's additional accessibility feature module that allows users to increase and
    decrease the font size, switch to a dyslexic font or toggle to a high contrast viewing mode.</p>
   <p>It includes:</p>
