--- a/pages/sample/accordions.html
+++ b/pages/sample/accordions.html
@@ -38,7 +38,7 @@ permalink: "/components/accordions.html"
     </a>
    </div>
    <div id="collapse-example1" class="collapse show" role="tabpanel" aria-labelledby="heading-example1">
-    <div class="card-body p-b-lg">
+    <div class="p-a-md p-b-lg">
 
      {% include "../../src/_includes/modules/accordion.html" %}
 
@@ -150,18 +150,18 @@ permalink: "/components/accordions.html"
 <p>Write headings that are brief and descriptive.</p>
 <p>Only use accordions when:</p>
 <ul>
- <li>A small group of people needs the information</li>
- <li>People only need certain information (like selecting one of several license types)</li>
- <li>Providing notes or disclaimers</li>
+ <li>A small group of people needs the information.</li>
+ <li>People only need certain information (like selecting one of several license types).</li>
+ <li>Providing notes or disclaimers.</li>
 </ul>
 
 <h3>How not to use it</h3>
 
 <p>Do not use accordions:</p>
 <ul>
- <li>If more than a third of your visitors need the information in the accordion</li>
- <li>To make a page look shorter</li>
- <li>Inside other accordions</li>
+ <li>If more than a third of your visitors need the information in the accordion.</li>
+ <li>To make a page look shorter.</li>
+ <li>Inside other accordions.</li>
 </ul>
 <p>Accordions hide information until someone opens them. This added step means visitors have to do extra work to get the
  information.</p>
