updated patterns side navigation #223

--- a/pages/patterns.html
+++ b/pages/patterns.html
@@ -18,15 +18,15 @@ permalink: "patterns.html"
 
 <div class="row">
  <div class="col-md-4 m-t-md">
-  <a href="/patterns/blurbs.html"
+  <a href="/patterns/card-grid.html"
    class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover  color-primary color-primary-hover"
    title="Blurbs examples">
    <div class="p-a-md d-flex align-content-center">
     <img src="/images/components/icon-blurbs.jpg" alt="Blurbs illustration" class="img-fluid">
    </div>
    <div class="p-a">
-    <h3 class="h5 m-t-0">Blurbs</h3>
-    <p class="font-size-16 color-black">Blurbs are a great way to showcase small bits of important information
+    <h3 class="h5 m-t-0">Card grid</h3>
+    <p class="font-size-16 color-black">Card grid is a great way to showcase small bits of important information
     </p>
    </div>
   </a>
@@ -53,7 +53,7 @@ permalink: "patterns.html"
     <img src="/images/components/icon-feature.jpg" alt="Feature Card illustration" class="img-fluid">
    </div>
    <div class="p-a">
-    <h3 class="h5 m-t-0">Feature Card</h3>
+    <h3 class="h5 m-t-0">Feature card</h3>
     <p class="font-size-16 color-black">A highlight space on the homepage with text, image, and a button
     </p>
    </div>
@@ -73,8 +73,8 @@ permalink: "patterns.html"
     <img src="/images/components/icon-figure.jpg" alt="Figure with Captions illustration" class="img-fluid">
    </div>
    <div class="p-a">
-    <h3 class="h5 m-t-0">Figure with Captions</h3>
-    <p class="font-size-16 color-black">Figure with Captions displays a photo with a short title/description below it
+    <h3 class="h5 m-t-0">Figure with captions</h3>
+    <p class="font-size-16 color-black">Figure with captions displays a photo with a short title/description below it
     </p>
    </div>
   </a>
@@ -87,36 +87,13 @@ permalink: "patterns.html"
     <img src="/images/components/icon-grid.jpg" alt="Link Grid illustration" class="img-fluid">
    </div>
    <div class="p-a">
-    <h3 class="h5 m-t-0">Link Grid</h3>
+    <h3 class="h5 m-t-0">Link grid</h3>
     <p class="font-size-16 color-black">Grid of call-to-action buttons for top user tasks and needs
     </p>
    </div>
   </a>
  </div>
 
-
- <div class="col-md-4 m-t-md">
-  <a href="/patterns/news-blocks.html"
-   class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover  color-primary color-primary-hover"
-   title="News Blocks examples">
-   <div class="p-a-md d-flex align-content-center">
-    <img src="/images/components/icon-news.jpg" alt="News Blocks illustration" class="img-fluid">
-   </div>
-   <div class="p-a">
-    <h3 class="h5 m-t-0">News Blocks</h3>
-    <p class="font-size-16 color-black">A news blocks contains a repeating group of news items
-    </p>
-   </div>
-  </a>
- </div>
-
-</div>
-
-
-
-
-
-<div class="row">
  <div class="col-md-4 m-t-md">
   <a href="/patterns/news-list.html"
    class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover  color-primary color-primary-hover"
@@ -125,45 +102,58 @@ permalink: "patterns.html"
     <img src="/images/components/icon-newslist.jpg" alt="News List illustration" class="img-fluid">
    </div>
    <div class="p-a">
-    <h3 class="h5 m-t-0">News List</h3>
+    <h3 class="h5 m-t-0">News list</h3>
     <p class="font-size-16 color-black">A News list is a list of news headlines with image thumbnails</p>
    </div>
   </a>
  </div>
 
 
+</div>
+
+
+
+
+
+<div class="row">
+
+
+
  <div class="col-md-4 m-t-md">
-  <a href="/patterns/news-detail.html"
+  <a href="/patterns/news-article.html"
    class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover  color-primary color-primary-hover"
-   title="News Detail example">
+   title="News article example">
    <div class="p-a-md d-flex align-content-center">
-    <img src="/images/components/icon-newspage.jpg" alt="News Detail illustration" class="img-fluid">
+    <img src="/images/components/icon-newspage.jpg" alt="News article illustration" class="img-fluid">
    </div>
    <div class="p-a">
-    <h3 class="h5 m-t-0">News Detail</h3>
-    <p class="font-size-16 color-black">News Detail is an end page content module for news articles
+    <h3 class="h5 m-t-0">News article</h3>
+    <p class="font-size-16 color-black">News article is an end page content module for news articles
     </p>
    </div>
   </a>
  </div>
 
 
+
+
+
  <div class="col-md-4 m-t-md">
-  <a href="/patterns/panes.html"
+  <a href="/patterns/profile-banners.html"
    class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover  color-primary color-primary-hover"
-   title="Panes example">
+   title="Profile Banners examples">
    <div class="p-a-md d-flex align-content-center">
-    <img src="/images/components/icon-panes.jpg" alt="Panes illustration" class="img-fluid">
+    <img src="/images/components/icon-profile.jpg" alt="Profile Banner illustration" class="img-fluid">
    </div>
    <div class="p-a">
-    <h3 class="h5 m-t-0">Panes</h3>
-    <p class="font-size-16 color-black">Panes are separate defined areas within page that designated for displaying
-     news, events or
-     services
-    </p>
+    <h3 class="h5 m-t-0">Profile banners</h3>
+    <p class="font-size-16 color-black">A Profile banner is a card designated for displaying state officials and
+     representatives</p>
    </div>
   </a>
  </div>
+
+
 
 </div>
 
@@ -174,39 +164,10 @@ permalink: "patterns.html"
 
 
 <div class="row">
- <div class="col-md-4 m-t-md">
-  <a href="/patterns/profile-banners.html"
-   class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover  color-primary color-primary-hover"
-   title="Profile Banners examples">
-   <div class="p-a-md d-flex align-content-center">
-    <img src="/images/components/icon-profile.jpg" alt="Profile Banner illustration" class="img-fluid">
-   </div>
-   <div class="p-a">
-    <h3 class="h5 m-t-0">Profile Banners</h3>
-    <p class="font-size-16 color-black">A Profile Banner is a card designated for displaying state officials and
-     representatives</p>
-   </div>
-  </a>
- </div>
 
 
- <div class="col-md-4 m-t-md">
-  <a href="/patterns/testimonials.html"
-   class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover  color-primary color-primary-hover"
-   title="Testimonials examples">
-   <div class="p-a-md d-flex align-content-center">
-    <img src="/images/components/icon-testimonials.jpg" alt="Testimonial illustration" class="img-fluid">
-   </div>
-   <div class="p-a">
-    <h3 class="h5 m-t-0">Testimonials</h3>
-    <p class="font-size-16 color-black">A testimonials are used to let people know what other people think of your
-     products or
-     services to
-     establish a brand trust
-    </p>
-   </div>
-  </a>
- </div>
+
+
 
 
 
